--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img src="images/pic.png" alt="" /><h1>Hi I'm Harsha Kumavat<br /></h1>
+						<h1>Hi I'm Harsha Kumavat<br /></h1>
 						<p>Data Analyst Portfolio</p>
 				        <p>Self-learned Data Analyst well versed in SQL, Python, Excel, Tableau & Power BI</p>
 						<ul class="actions">
@@ -194,7 +194,7 @@
 							<section>
 								
 								<p><center>harshakumawat2000@gmail.com</center></p>
-								<p><center>+91 7678041095</center></p>
+								
 							</section>
 
 							<section>
