--- a/generic.html
+++ b/generic.html
@@ -148,7 +148,7 @@
 
 							<section>
 								
-								<p><center>harshakumawat2000@gmail.com</center></p>
+								<p><center>harshakumavat9@gmail.com</center></p>
 								
 							</section>
 
