--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 							<li><a href="https://www.credly.com/users/harsha-kumavat/badges" ><span class="label">Credly</span></a></li>
 							<li><a href="https://public.tableau.com/app/profile/harsha3818" ><span class="label">TableauPublic</span></a></li>
 							<li><a href="https://www.novypro.com/profile_projects/harsha-kumavat4209" ><span class="label">PowerBI</span></a></li>
+							<li><a href="https://harshakumavat.medium.com/" ><span class="label">Blog</span></a></li>
 						</ul>
 					</nav>
 
@@ -257,6 +258,7 @@
 									<li><a href="https://www.credly.com/users/harsha-kumavat/badges" ><span class="label">Credly</span></a></li>
 									<li><a href="https://public.tableau.com/app/profile/harsha3818" ><span class="label">TableauPublic</span></a></li>
 									<li><a href="https://www.novypro.com/profile_projects/harsha-kumavat4209" ><span class="label">PowerBI</span></a></li>
+									<li><a href="https://harshakumavat.medium.com/" ><span class="label">Blog</span></a></li>
 								</ul>
 							</section></center>
 						</section>
