--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Hi I'm Harsha Kumavat<br /></h1>
-						<p>Data Analyst Portfolio</p>
-				        <p>Self-learned Data Analyst well versed in SQL, Python, Excel, Tableau & Power BI</p>
+						<p>Data Engineer</p>
+				        <p>Data Engineer skilled in SQL, AWS Redshift, DBT, Airflow, Python, Power BI & QuickSight</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
