--- a/generic.html
+++ b/generic.html
@@ -59,6 +59,7 @@
 								
 								<b>Additional Skills:</b> Statistics, Machine learning, Microsoft PowerPoint,Microsoft Word <br />
 								<b>IDE:</b> VS Code, Google Colab, Jupyter Notebook, PyCharm <br />
+								<b>Version Control:</b> GitHub, GitLab <br />
 								
 								</p>
 							</article>
