--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Hi I'm Harsha Kumavat<br /></h1>
 						<p>Data Engineer</p>
-				        <p>Data Engineer skilled in SQL, AWS Redshift, DBT, Airflow, Python, Power BI & QuickSight</p>
+				        <p>Data Engineer skilled in SQL, Amazon Redshift, DBT, Airflow, Python, Power BI & QuickSight</p>
 						<ul class="actions">
 							<li><a href="#nav" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
