--- a/generic.html
+++ b/generic.html
@@ -51,8 +51,8 @@
 								
 							
 							<p><b>Skills:</b><br />
-								<b>Data Engineering:</b> SQL, AWS Redshift, DBT (Data Build Tool), Airflow <br />
-								<b>Data Visualization:</b> AWS QuickSight, Power BI, Matplotlib, Seaborn, Plotly <br />
+								<b>Data Engineering:</b> SQL, Amazon Redshift, DBT (Data Build Tool), Airflow <br />
+								<b>Data Visualization:</b> Amazon QuickSight, Power BI, Matplotlib, Seaborn, Plotly <br />
 								<b>Programming language:</b> Python(Pandas, NumPy, scikit learn) <br />
 								<b>Database:</b> MySQL ,PostgreSQL <br /> 
 								<b>Spreadsheets:</b> Excel<br />
